--- a/mktxp/mktxp.conf
+++ b/mktxp/mktxp.conf
@@ -11,14 +11,14 @@
 ## GNU General Public License for more details.
 
 
-[Sample-Router]
-    enabled = False         # turns metrics collection for this RouterOS device on / off
+[Skeptomai-home-router]
+    enabled = True         # turns metrics collection for this RouterOS device on / off
     
-    hostname = localhost    # RouterOS IP address
+    hostname = 192.168.88.1 # RouterOS IP address
     port = 8728             # RouterOS IP Port
     
-    username = username     # RouterOS user, needs to have 'read' and 'api' permissions
-    password = password
+    username = admin     # RouterOS user, needs to have 'read' and 'api' permissions
+    password = fotbaH-kuxweq-0hukdo
     
     use_ssl = False                 # enables connection via API-SSL servis
     no_ssl_certificate = False      # enables API_SSL connect without router SSL certificate
