--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -38,7 +38,7 @@ scrape_configs:
     static_configs:
       - targets: ['mktxp:49090']
 
-  - job_name: tx2s
+  - job_name: 'tx2s'
     honor_timestamps: true
     scrape_interval: 15s
     scrape_timeout: 10s
@@ -52,3 +52,12 @@ scrape_configs:
       - tx2-secondary.local:9100
       - tx2-tertiary.local:9100
       - tx2-quaternary.local:9100
+
+  - job_name: 'ping'
+    scrape_interval: 15s
+    scrape_timeout: 10s
+    scheme: http
+    metrics_path: /metrics
+    static_configs:
+    - targets:
+      - cb-dell.local:9427
