--- a/mktxp/_mktxp.conf
+++ b/mktxp/_mktxp.conf
@@ -19,7 +19,7 @@
     max_delay_on_failure = 900
     delay_inc_div = 5
 
-    bandwidth = True                # Turns metrics bandwidth metrics collection on / off    
+    bandwidth = False                # Turns metrics bandwidth metrics collection on / off    
     bandwidth_test_interval = 420   # Interval for colllecting bandwidth metrics
     minimal_collect_interval = 5    # Minimal metric collection interval
 
