--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -20,19 +20,19 @@ scrape_configs:
 
   - job_name: 'prometheus'
     static_configs:
-    - targets: ['prometheus:9090']
+    - targets: ['cb-dell.local:9090']
 
   - job_name: 'grafana'
     static_configs:
-    - targets: ['grafana:3000']
+    - targets: ['cb-dell.local:3000']
 
   - job_name: 'loki'
     static_configs:
-    - targets: ['loki:3100']
+    - targets: ['cb-dell.local:3100']
 
   - job_name: 'promtail'
     static_configs:
-    - targets: ['promtail:9080']
+    - targets: ['cb-dell.local:9080']
 
   - job_name: 'mktxp'
     static_configs:
