--- a/ping_exporter/config.yml
+++ b/ping_exporter/config.yml
@@ -1,8 +1,6 @@
 targets:
   - 8.8.8.8
   - 8.8.4.4
-  - 2001:4860:4860::8888
-  - 2001:4860:4860::8844
   - google.com:
       asn: 15169
 
@@ -17,4 +15,4 @@ ping:
   size: 120
 
 options:
-  disableIPv6: false
+  disableIPv6: true
