working graphite-exporter and grafana dashboard

--- a/docker-compose-mktxp-stack.yml
+++ b/docker-compose-mktxp-stack.yml
@@ -116,18 +116,22 @@ services:
     - ./ping_exporter:/config:ro
 
   graphite-exporter:
-    command:
-    -  --graphite.mapping-config=/tmp/graphite-exporter.yml
-    -  --graphite.listen-address=:2003
+    command: --graphite.mapping-config=/tmp/graphite-exporter.yml --graphite.listen-address=:2003
     container_name: graphite-exporter
     image: prom/graphite-exporter:latest
     ports:
-    - protocol: tcp
-      published: 9108
-      target: 9108
-    - protocol: udp
-      published: 2003
-      target: 2003
+      - protocol: tcp
+        published: 9108
+        target: 9108
+      - protocol: tcp
+        published: 9109
+        target: 9109
+      - protocol: udp
+        published: 2003
+        target: 2003
+      - protocol: tcp
+        published: 2003
+        target: 2003
     restart: always
     volumes:
     - ./graphite-exporter/graphite-exporter.yml:/tmp/graphite-exporter.yml:ro
