--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -20,38 +20,23 @@ scrape_configs:
 
   - job_name: 'prometheus'
     static_configs:
-    - targets: ['cb-dell.local:9090']
+    - targets: ['panopticon.local:9090']
 
   - job_name: 'grafana'
     static_configs:
-    - targets: ['cb-dell.local:3000']
+    - targets: ['panopticon.local:3000']
 
   - job_name: 'loki'
     static_configs:
-    - targets: ['cb-dell.local:3100']
+    - targets: ['panopticon.local:3100']
 
   - job_name: 'promtail'
     static_configs:
-    - targets: ['cb-dell.local:9080']
+    - targets: ['panopticon.local:9080']
 
   - job_name: 'mktxp'
     static_configs:
       - targets: ['mktxp:49090']
-
-  - job_name: 'tx2s'
-    honor_timestamps: true
-    scrape_interval: 15s
-    scrape_timeout: 10s
-    metrics_path: /metrics
-    scheme: http
-    follow_redirects: true
-    enable_http2: true
-    static_configs:
-    - targets:
-      - tx2-primary.local:9100
-      - tx2-secondary.local:9100
-      - tx2-tertiary.local:9100
-      - tx2-quaternary.local:9100
 
   - job_name: 'ping'
     scrape_interval: 15s
@@ -60,7 +45,7 @@ scrape_configs:
     metrics_path: /metrics
     static_configs:
     - targets:
-      - cb-dell.local:9427
+      - panopticon.local:9427
 
   - job_name: 'truenas-graphite'
     scrape_interval: 15s
@@ -69,4 +54,4 @@ scrape_configs:
     metrics_path: /metrics
     static_configs:
     - targets:
-      - cb-dell.local:9108
+      - panopticon.local:9108
