--- a/docker-compose-mktxp-stack.yml
+++ b/docker-compose-mktxp-stack.yml
@@ -39,6 +39,7 @@ services:
 
   loki:
     image: grafana/loki:latest
+    container_name: loki
     networks:
       mktxp: null
     ports:
@@ -56,7 +57,7 @@ services:
     - --web.enable-admin-api
     - --web.enable-lifecycle
     container_name: prometheus
-    image: bitnami/prometheus:latest
+    image: prom/prometheus:latest
     networks:
       mktxp: null
     ports:
@@ -113,6 +114,17 @@ services:
     restart: always
     volumes:
     - ./syslog-ng/syslog-ng.conf:/etc/syslog-ng/syslog-ng.conf:ro
+
+  node_exporter:
+    image: quay.io/prometheus/node-exporter:latest
+    container_name: node_exporter
+    command:
+      - '--path.rootfs=/host'
+    network_mode: host
+    pid: host
+    restart: unless-stopped
+    volumes:
+      - '/:/host:ro,rslave'
 
   ping_exporter:
     container_name: ping_exporter
