--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -55,3 +55,7 @@ scrape_configs:
     static_configs:
     - targets:
       - panopticon.local:9108
+
+  - job_name: 'node'
+    static_configs:
+     - targets: ['localhost:9100']
