--- a/docker-compose-mktxp-stack.yml
+++ b/docker-compose-mktxp-stack.yml
@@ -118,9 +118,16 @@ services:
   node_exporter:
     image: quay.io/prometheus/node-exporter:latest
     container_name: node_exporter
+    networks:
+      mktxp: null
+    ports:
+    - protocol: tcp
+      published: 9100
+      target: 9100
     command:
       - '--path.rootfs=/host'
-    network_mode: host
+      - '--collector.systemd'
+      - '--collector.processes'
     pid: host
     restart: unless-stopped
     volumes:
