--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -58,4 +58,4 @@ scrape_configs:
 
   - job_name: 'node'
     static_configs:
-     - targets: ['localhost:9100']
+     - targets: ['panopticon.local:9100']
